package Policia;

/**
 * <h1>TipoArma.java</h1><hr>
 * <p>Este enumerado recoge los unicos tipos posibles de armas</p>
 *
 * @author Adrián Suárez Valdayo
 * @vesrion 19-abr-2024
 */
public enum TipoArma {
    RIFLE, CUCHILLO, PISTOLA
}
