package Policia;

/**
 * <h1>TipoVehiculo.java</h1><hr>
 * <p>Este enumerado recoge los unicos tipos posibles de vehiculo</p>
 *
 * @author Adrián Suárez Valdayo
 * @vesrion 19-abr-2024
 */
public enum TipoVehiculo {
    TODOTERRENO, MOTO, COCHE
}
